--- a/webpageResp.css
+++ b/webpageResp.css
@@ -31,6 +31,12 @@ body{
 .child2{
     border: 2px solid rgb(255, 255, 255);
     background-color: rgb(139 121 38);
+    transition: all 1s ease 0.1s;
+}
+.child2:hover{
+    background-color: rgb(89, 124, 2);
+    transition: all 1s ease-out 0.1s;
+    transform: scale(1,1.5);
 }
 .child2 ul{
     display: flex;
@@ -42,11 +48,23 @@ body{
     margin: 5px 15px;
     padding: 0px 10px;
 }
-.child ul li a:hover{
-    color: rgb(86, 226, 251);
-}
 .child ul li a{
     text-decoration: none;
+}
+.child ul li a:hover{
+    color: rgb(200, 255, 47);
+}
+.child ul li a:hover::after{            /* for pop up */
+    content: "Dummy link";
+    display: block;
+    position: absolute;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    color: rgb(86, 226, 251);
+    width: auto;
+    padding: 5px;
+    margin: 2px auto;
+    background-color: rgb(0, 0, 0);
 }
 .child1{
     margin: 5px 15px;
@@ -56,6 +74,11 @@ body{
     border-radius: 50%;
     width: 66px;
     height: auto;
+    transition: all 0.2s ease;
+}
+.child1 img:hover{
+    transition: all 0.2s ease;
+    transform: rotate(360deg);
 }
 .content{
     /* border: 2px solid rgb(182, 13, 255); */
@@ -89,9 +112,14 @@ body{
     padding: 10px;
 }
 .item{
+    width: 100%;
     text-align: center;
     border: 2px solid rgb(255, 255, 255);
     box-shadow: 2px 2px 3px rgb(130, 255, 255);
+}
+.item:hover{
+    transform: scale(1,1.1);
+    background-color: #0f5c47;
 }
 .item p{
     text-align: left;
@@ -110,7 +138,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: stretch;
-    margin: 15px;
+    margin: 10px;
     padding: 30px;
 }
 .foot{
@@ -150,6 +178,20 @@ body{
     .child ul li{
         margin: 0px 0px;
         padding: 0px 0px;
+    }
+    .footter{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .par{
+        text-align: center;
+    }
+    .foot{
+        width: 100%;
+    } 
+    .item p{
+        text-align: center;
     }
 }
 
