--- a/webpageResp.css
+++ b/webpageResp.css
@@ -147,8 +147,12 @@ body{
     text-align: center;
 }
 #para{
+    position: fixed;
+    bottom: 0px;
     text-align: center;
+    font-size: 8px;
     margin: 10px;
+    width: 100%;
 }
 .par{
     text-align: left;
