--- a/webpageResp.css
+++ b/webpageResp.css
@@ -149,10 +149,15 @@ body{
 #para{
     position: fixed;
     bottom: 0px;
+    left: 0px;
     text-align: center;
     font-size: 8px;
-    margin: 10px;
     width: 100%;
+    border: 2px solid black;
+    background-color: rgb(42, 39, 39);
+    margin: 0px;
+    border-radius: 0px;
+    z-index: -1;
 }
 .par{
     text-align: left;
