--- a/webpageResp.css
+++ b/webpageResp.css
@@ -1,4 +1,5 @@
 *{
+    position: relative;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 5px;
     padding: 0px;
@@ -9,14 +10,24 @@ h4,h2,h3{
     text-shadow: 2px 2px 1px #8980a9;
 }
 header{
-    background-image: url("https://images.freeimages.com/images/large-previews/c83/nature-flowers-1196207.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
     text-shadow: 2px 2px 1px #070609;
 }
+header::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url("https://wallpaperaccess.com/full/7092222.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+    border-radius: 8px;
+}
 body{
-    background-color: #004e39;
+    background-color: #0e1a19;
 }
 
 /* for header */
@@ -29,9 +40,21 @@ body{
     margin-top: 5px;
 }
 .child2{
+    position: relative;
     border: 2px solid rgb(255, 255, 255);
-    background-color: rgb(139 121 38);
     transition: all 1s ease 0.1s;
+}
+.child2::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.5;
+    border-radius: 8px;
 }
 .child2:hover{
     background-color: rgb(89, 124, 2);
@@ -112,6 +135,7 @@ body{
     padding: 10px;
 }
 .item{
+    position: relative;
     width: 100%;
     text-align: center;
     border: 2px solid rgb(255, 255, 255);
@@ -119,7 +143,7 @@ body{
 }
 .item:hover{
     transform: scale(1,1.1);
-    background-color: #0f5c47;
+    background-color: #18302e;
 }
 .item p{
     text-align: left;
