--- a/webpageResp.css
+++ b/webpageResp.css
@@ -6,8 +6,24 @@
     color: white;
     border-radius: 8px;
 }
-h4,h2,h3{
+h4,h3,section h2{
     text-shadow: 2px 2px 1px #8980a9;
+}
+#nam{
+    color: rgb(57 218 255);
+}
+.content h3,h2{
+    text-shadow: none;
+    line-height: 2rem;
+}
+.content h3{
+    width: 15%;
+}
+.typed-cursor {
+    margin: 0;
+}
+#element{
+    margin: 0;
 }
 header{
     position: relative;
@@ -20,7 +36,7 @@ header::before{
     left: 0;
     height: 100%;
     width: 100%;
-    background-image: url("https://wallpaperaccess.com/full/7092222.jpg");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCnzjkH4AigpqzekEM0F99fLmnw59Ayc5kHQ&usqp=CAU");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
@@ -57,7 +73,7 @@ body{
     border-radius: 8px;
 }
 .child2:hover{
-    background-color: rgb(89, 124, 2);
+    background-color: rgb(52, 70, 6);
     transition: all 1s ease-out 0.1s;
     transform: scale(1,1.5);
 }
@@ -77,7 +93,8 @@ body{
 .child ul li a:hover{
     color: rgb(200, 255, 47);
 }
-.child ul li a:hover::after{            /* for pop up */
+/*
+.child ul li a:hover::after{            for pop up
     content: "Dummy link";
     display: block;
     position: absolute;
@@ -89,9 +106,13 @@ body{
     margin: 2px auto;
     background-color: rgb(0, 0, 0);
 }
+*/
 .child1{
     margin: 5px 15px;
     padding: 0px 0px;
+}
+.child img{
+    border: 1px solid white;
 }
 .child1 img{
     border-radius: 50%;
@@ -114,10 +135,9 @@ body{
 }
 .sam{
     width: 50%;
-}
-.content h2{
-    /* border: 2px solid black; */
     text-align: center;
+    margin-bottom: -4px;
+    padding: 2px;
 }
 .content p{
     /* border: 2px solid black; */
@@ -129,13 +149,14 @@ body{
 .parent{
     /* border: 2px solid brown; */
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin: 0px;
     padding: 10px;
 }
 .item{
     position: relative;
+    padding: 0.5rem;
     width: 100%;
     text-align: center;
     border: 2px solid rgb(255, 255, 255);
@@ -148,52 +169,68 @@ body{
 .item p{
     text-align: left;
     padding: 15px 20px;
+    padding-bottom: 0;
 }
 .sect{
     margin: 0px;
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 10px;
     text-align: center;
 }
-
-/* for footer */
-.footter{
-    border: 2px solid white;
+#course{
+    margin-top: 10px;
+}
+.box{
     display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
+    justify-content: center;
+    width: 80%;
+    border: none;
+    box-shadow: 1px 1px 10px 2px rgb(255, 255, 255);
+}
+.childbox{
+    align-self: center;
+}
+.childbox1{
+    margin: 0 !important;
+}
+.childbox1 img{
+    width: 12rem;
     margin: 10px;
-    padding: 30px;
 }
-.foot{
-    /* border: 2px solid rgb(232, 110, 110); */
-    width: 30%;
+.childbox2 p{
+    padding: 2.8rem;
+    line-height: 2rem;
+}
+#contac{
+    margin-top: 10px;
+    text-shadow: 2px 2px 1px #8980a9;
+}
+footer p{
     text-align: center;
-}
-#para{
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    text-align: center;
-    font-size: 8px;
-    width: 100%;
-    border: 2px solid black;
-    background-color: rgb(42, 39, 39);
-    margin: 0px;
-    border-radius: 0px;
-    z-index: -1;
-}
-.par{
-    text-align: left;
 }
 
 /* for responsive */
 @media(max-width:1500px){
-    .parent{
-        flex-direction: column;
-    }
     .item{
         margin: 10px;
+    }
+    .content h3{
+        width: 20%;
+    }
+}
+@media(max-width:940px){
+    header::before{
+        background-image: url('https://wallpapers.com/images/hd/plain-black-background-02fh7564l8qq4m6d.jpg');
+    }
+    .box{
+        flex-direction: column;
+    }
+    .childbox2 p{
+        padding: 2rem;
+    }
+    .childbox1 img{
+        width: 18rem;
+        height: 18rem;
     }
 }
 @media(max-width:800px){
@@ -221,9 +258,6 @@ body{
         justify-content: center;
         align-items: center;
     }
-    .par{
-        text-align: center;
-    }
     .foot{
         width: 100%;
     } 
@@ -232,6 +266,16 @@ body{
     }
     .content{
         margin: 0px;
+    }
+    .content h3{
+        width: 100%;
+    }
+    .childbox1 img{
+        width: 12rem;
+        height: 14rem;
+    }
+    .childbox2 p{
+        padding: 1rem;
     }
 }
 
